# Software-Engineering-Deep-Learning-Systems-Training-

./: .gitignore  AGENTS.md  Cargo.toml  build_output.txt  config.json  readme.md  verify_qa_data.py
data/: calendar_2024.docx  calendar_2024.json  calendar_2025.docx  calendar_2025.json  calendar_2026.docx  calendar_2026.json  convert.py  dot.py  dott.py  ~$lendar_2026.docx
docs/: LOSS_FUNCTION_UPDATE.md  report.md
py_files/: augment_training_data.py  update_answer_offset.py
report/: report.md
src/: data.rs  main.rs  model.rs  qa_inference.rs  training.rs
