[package]
name = "word-doc-qa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.20.1", features = ["train", "wgpu", "autodiff"] }
docx-rs = "0.4"
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8" # Added for data shuffling
# Add this for handling command-line arguments and other utilities
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
burn = { version = "0.20.1" } # , features = ["test"] | version 0.20.1 does not have feature called test

# Workaround for Rust compiler ICE with complex trait bounds
[profile.release]
lto = false
opt-level = 2
incremental = false
